// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="base-Badge inline-flex flex-shrink content-middle flex-nowrap justify-normal text-[10px] font-semibold leading-3 align-middle text-graphite top-0 right-0 static"
    >
      <span
        class="base-Badge border-solid items-center content-center inline-flex flex-nowrap justify-center z-[1] border static bg-white text-graphite border-gray px-[3px] rounded-full h-[1.25rem] min-w"
      >
        5
      </span>
    </span>
  </div>
</div>
`;

exports[`Badge renders in red variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="base-Badge inline-flex flex-shrink content-middle flex-nowrap justify-normal text-[10px] font-semibold leading-3 align-middle text-graphite top-0 right-0 static"
    >
      <span
        class="base-Badge border-solid items-center content-center inline-flex flex-nowrap justify-center z-[1] border static text-white bg-red border-red px-[3px] rounded-full h-[1.25rem] min-w"
      >
        5
      </span>
    </span>
  </div>
</div>
`;
